# arc-402

./: .gitignore  AUDIT-MACHINE-SWEEP-2026-03-23.md  AUDIT-MACHINE-SWEEP-SUBSCRIPTION-2026-03-23.md  AUDIT-RECONCILIATION-COMPUTE-2026-03-23.md  AUDIT-REPORT-COMPUTE-2026-03-23.md  AUDIT-REPORT-COMPUTE-ARCHITECT-2026-03-23.md  CHANGELOG.md  CLI-SPEC.md  CONTRIBUTING.md  DEPLOY-HANDSHAKE.md  E2E-TESTNET-RESULTS-2026-03-23.md  ENGINEERING-STATE.md  LICENSE  PLUGIN-REVIEW-2026-03-23.md  README.md  SECURITY-AUDIT.md  TODO.md  echidna-sweep.yaml  echidna.yaml  foundry.toml  medusa.json
arena/: CLI-SPEC.md  DISTRICT2-SPEC.md  WATCHTOWER-SPEC.md  WEB-SPEC.md
arena/contracts/: ArenaPool.sol  IntelligenceRegistry.sol  SquadBriefing.sol  SquadRevenueSplit.sol  StatusRegistry.sol
arena/script/: DeployArenaPool.s.sol  DeployIntelligenceRegistry.s.sol  (+2 more)
articles/: 01-agents-with-wallets-is-not-enough-v2.md
audit/: AUDIT-PASSKEY-2026-03-17.md  AUDIT-PASSKEY-FIXES-2026-03-17.md  POSTMORTEM-ARC402-WALLET-DRAIN-2026-03-17.md
cache/: solidity-files-cache.json
cli/: README.md  TUI-SPEC.md  package-lock.json  package.json  tsconfig.json
docs/: AGENT-SECURITY.md  THREAT-MODEL.md  agent-lifecycle.md  agreement-tree-liability.md  getting-started.md  launch-framing-checklist.md  launch-implementation-roadmap.md  launch-readiness-prd.md  launch-scope.md  macbook-validation-runbook.md  megabrain-fresh-install-runbook-2026-03-27.md  megabrain-upgrade-validation-2026-03-27.md  mev-exposure.md  networks.md  openclaw-node-setup.md  phase6c-verification.md  post-audit-launch-checklist.md  public-flip-readiness-checklist.md  release-notes-phase6b-v2-draft.md  release-plan-phase5b.md  release-prep-phase6b-v2.md  repo-slip-through-audit-2026-03-27.md  state-machine.md  wallet-governance.md  workroom.md
examples/: hello-arc402.ts
hermes/plugins/: pyproject.toml
hermes/plugins/arc402_hermes/: __init__.py  plugin.py
hermes/plugins/arc402_hermes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
infra/: arc402-workroom.service
landing/: DESIGN.md  package-lock.json  package.json
memory/: 2026-03-17.md  2026-03-19.md
plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
provisioner/: README.md  package-lock.json  package.json  wrangler.toml
python-sdk/: CHANGELOG.md  README.md  pyproject.toml
python-sdk/arc402/: __init__.py  abis.py  agent.py  agreement.py  arena.py  dispute_arbitration.py  endpoint.py  policy.py  session_channels.py  types.py
python-sdk/tests/: test_wallet.py
reference/: .gitignore  .solhint.json  AUDIT-TARGET-SHA.txt  PROTOCOL-SECURITY-MODEL.md  README.md  foundry.toml  hardhat.config.ts  medusa.json  package-lock.json  package.json  wake.toml
script/: DeployComputeAgreement.s.sol  DeploySubscriptionAgreement.s.sol
scripts/: daemon-split-smoke.cjs  deployComputeAgreement.ts  drain-v4.ts  verify-phase6c.sh
spec/: 03-trust-primitive.md  07-agent-registry.md  08-service-agreement.md  09-trust-graph-v2.md  14-negotiation-protocol.md  18-discovery-search.md  18-session-channels.md  19-multi-party-agreements.md  20-protocol-versioning.md  21-relay-architecture.md  22-trust-score-economics.md  22-watchtower.md  23-agent-metadata.md  24-deliverable-types.md  25-deliverable-privacy.md  26-contract-interaction.md  27-soulbound-identity.md  28-trust-score-time-weighting.md  29-wallet-migration-policy.md  33-passkey-auth.md  34-openshell-integration.md  35-onboarding-app.md  36-embedded-wallet-auth.md  37-gas-sponsorship.md
subdomain-worker/: wrangler.toml
subgraph/: package-lock.json  package.json  schema.graphql  subgraph.yaml
test/: ComputeAgreement.attacker.t.sol  ComputeAgreement.t.sol  SubscriptionAgreement.attacker-v2.t.sol  SubscriptionAgreement.t.sol
web/: .env.example  index.html  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
workroom/: Dockerfile  arena-policy.yaml  dns-refresh.sh  entrypoint.sh  policy-parser.sh
(+520 files in other folders)
