[project]
name = "arc402"
version = "0.5.6"
description = "ARC-402 Python SDK — governed wallet, node, daemon, and workroom integration surface"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["web3", "agents", "wallet", "governance", "blockchain", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "web3>=7.0.0",
    "pydantic>=2.0.0",
    "eth-account>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/ARC-402/arc402"
Documentation = "https://github.com/ARC-402/arc402/tree/main/docs"
Repository = "https://github.com/ARC-402/arc402"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["arc402"]
