[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc402-hermes"
version = "1.0.0"
description = "ARC-402 plugin for the Hermes gateway — autonomous hire interception, spend policy enforcement, workroom job injection, and on-chain signing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["arc402", "hermes", "web3", "agent-economy", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[project.entry-points."hermes.plugins"]
arc402 = "arc402_hermes.plugin:create_plugin"

[project.urls]
Homepage = "https://github.com/arc402/arc402"
Documentation = "https://arc402.xyz/docs/hermes-integration"
Repository = "https://github.com/arc402/arc402"
"Bug Tracker" = "https://github.com/arc402/arc402/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arc402_hermes*"]

[tool.setuptools.package-data]
"arc402_hermes" = ["py.typed"]
